Fixes #415 by correctly adjusting old calc items for multi-currency rollups as well

--- a/rollup/core/classes/RollupCalculator.cls
+++ b/rollup/core/classes/RollupCalculator.cls
@@ -295,6 +295,13 @@ public without sharing abstract class RollupCalculator {
     List<SObject> temporaryItems = new List<SObject>(items);
     items.clear(); // the List may not be strongly typed, but this is a good way to keep it typed if it is
     this.transformForMultiCurrencyOrgs(temporaryItems);
+    if (oldCalcItems.isEmpty() == false && this.isMultiCurrencyRollup) {
+      List<SObject> tempOldCalcItems = oldCalcItems.values();
+      this.transformForMultiCurrencyOrgs(tempOldCalcItems);
+      for (SObject oldCalcItem : tempOldCalcItems) {
+        oldCalcItems.put(oldCalcItem.Id, this.getTransformedCalcItem(oldCalcItem));
+      }
+    }
     for (SObject item : temporaryItems) {
       Boolean currentItemMatches = this.eval?.matches(item) != false;
       if (currentItemMatches == false) {
