Add guard clause for System.isBatch when considering whether or not FullBatchRecalculator can start-up even in an async environment care of #414

--- a/rollup/core/classes/RollupFullBatchRecalculator.cls
+++ b/rollup/core/classes/RollupFullBatchRecalculator.cls
@@ -31,7 +31,7 @@ public without sharing virtual class RollupFullBatchRecalculator extends RollupF
   }
 
   protected override List<RollupAsyncProcessor> transformFullRecalcRollups() {
-    if (this.isProcessed == false && this.rollupControl.ShouldRunAs__c == RollupMetaPicklists.ShouldRunAs.Synchronous) {
+    if (this.isProcessed == false && this.rollupControl.ShouldRunAs__c == RollupMetaPicklists.ShouldRunAs.Synchronous && System.isBatch() == false) {
       this.startAsyncWork();
     }
     return new List<RollupAsyncProcessor>();
